@@ -1,3 +1,0 @@
-jaraco.util contains a number of nominally useful, reusable classes and
-functions. They're designed to be intuitively named and self-documenting
-(many with extensive doctests).
