@@ -1,46 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2018/04/11 19:47:13 adam Exp $
-bin/roll-dice
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/namespace_packages.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/${EGG_NAME}-nspkg.pth
-${PYSITELIB}/jaraco/lang/__init__.py
-${PYSITELIB}/jaraco/lang/__init__.pyc
-${PYSITELIB}/jaraco/lang/__init__.pyo
-${PYSITELIB}/jaraco/lang/python.py
-${PYSITELIB}/jaraco/lang/python.pyc
-${PYSITELIB}/jaraco/lang/python.pyo
-${PYSITELIB}/jaraco/util/__init__.py
-${PYSITELIB}/jaraco/util/__init__.pyc
-${PYSITELIB}/jaraco/util/__init__.pyo
-${PYSITELIB}/jaraco/util/auth.py
-${PYSITELIB}/jaraco/util/auth.pyc
-${PYSITELIB}/jaraco/util/auth.pyo
-${PYSITELIB}/jaraco/util/cmp.py
-${PYSITELIB}/jaraco/util/cmp.pyc
-${PYSITELIB}/jaraco/util/cmp.pyo
-${PYSITELIB}/jaraco/util/concurrency.py
-${PYSITELIB}/jaraco/util/concurrency.pyc
-${PYSITELIB}/jaraco/util/concurrency.pyo
-${PYSITELIB}/jaraco/util/dice.py
-${PYSITELIB}/jaraco/util/dice.pyc
-${PYSITELIB}/jaraco/util/dice.pyo
-${PYSITELIB}/jaraco/util/exceptions.py
-${PYSITELIB}/jaraco/util/exceptions.pyc
-${PYSITELIB}/jaraco/util/exceptions.pyo
-${PYSITELIB}/jaraco/util/numbers.py
-${PYSITELIB}/jaraco/util/numbers.pyc
-${PYSITELIB}/jaraco/util/numbers.pyo
-${PYSITELIB}/jaraco/util/random.py
-${PYSITELIB}/jaraco/util/random.pyc
-${PYSITELIB}/jaraco/util/random.pyo
-${PYSITELIB}/jaraco/util/stream.py
-${PYSITELIB}/jaraco/util/stream.pyc
-${PYSITELIB}/jaraco/util/stream.pyo
-${PYSITELIB}/jaraco/util/subprocess.py
-${PYSITELIB}/jaraco/util/subprocess.pyc
-${PYSITELIB}/jaraco/util/subprocess.pyo
