@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.5 2021/10/26 10:18:36 nia Exp $
-
-BLAKE2s (jaraco.util-11.0.zip) = fa467147f2828c4cd27102b10d4aa09a28eeb3df5015ba01b67731b32bb3d0d5
-SHA512 (jaraco.util-11.0.zip) = 73b2e37fc306e1f2dded3a6e00516f63d1fbdd558894f2b37441dc4b385446374100b52821c59103a90686433063985bb820d05c73777d080cd9e43dc997fabf
-Size (jaraco.util-11.0.zip) = 38817 bytes
