@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2932 2024/04/30 13:22:21 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2933 2024/04/30 13:23:23 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4769,3 +4769,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated misc/cabal-install to 3.10.2.1 [pho 2024-04-30]
 	Updated net/py-ptt to 1.19.6 [wiz 2024-04-30]
 	Updated net/py-irclib to 20.4.0 [wiz 2024-04-30]
+	Removed devel/py-jaraco_util [wiz 2024-04-30]
